<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_promedio"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            android:textColor="@color/title_purple"
            android:gravity="center"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/element_margin" />

        <!-- Tarjeta: datos del estudiante -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/surface"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="2dp"
            android:layout_marginBottom="@dimen/element_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datos_estudiante"
                    android:textColor="@color/title_purple"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/section_margin_bottom" />

                <EditText
                    android:id="@+id/inputNombreEstudiante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_estudiante"
                    android:textColor="@color/white"
                    android:textColorHint="@color/title_purple"
                    android:inputType="text" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Tarjeta: notas y ponderaciones -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/surface"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="2dp"
            android:layout_marginBottom="@dimen/element_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notas_ponderaciones"
                    android:textColor="@color/title_purple"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/section_margin_bottom" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nota_1_label"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/small_margin" />
                <EditText
                    android:id="@+id/inputNota1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nota_1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/title_purple"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="@dimen/element_margin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nota_2_label"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/small_margin" />
                <EditText
                    android:id="@+id/inputNota2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nota_2"
                    android:textColor="@color/white"
                    android:textColorHint="@color/title_purple"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="@dimen/element_margin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nota_3_label"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/small_margin" />
                <EditText
                    android:id="@+id/inputNota3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nota_3"
                    android:textColor="@color/white"
                    android:textColorHint="@color/title_purple"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="@dimen/element_margin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nota_4_label"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/small_margin" />
                <EditText
                    android:id="@+id/inputNota4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nota_4"
                    android:textColor="@color/white"
                    android:textColorHint="@color/title_purple"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="@dimen/element_margin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nota_5_label"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/small_margin" />
                <EditText
                    android:id="@+id/inputNota5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nota_5"
                    android:textColor="@color/white"
                    android:textColorHint="@color/title_purple"
                    android:inputType="numberDecimal" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnCalcularPromedio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/calcular_promedio"
            android:textAllCaps="false"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/element_margin" />

        <!-- Tarjeta: resultado -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/surface"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resultado"
                    android:textColor="@color/title_purple"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/small_margin" />

                <TextView
                    android:id="@+id/txtResultadoPromedio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtEstadoPromedio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/small_margin" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>